# prism-insight

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  CURSOR.md  Dockerfile  README.md  README_DOCKER.md  README_es.md  README_ja.md  README_zh.md  analysis_manager.py  archive_api.py  archive_query.py  check_market_day.py  compress_trading_memory.py  demo.py  docker-compose.quickstart.yml  docker-compose.yml  dockerignore  firebase_bridge.py  firecrawl_client.py  mcp_agent.config.yaml  mcp_agent.config.yaml.example  pdf_converter.py  pending_order_batch.py  performance_tracker_batch.py  pyproject.toml  quickstart.sh  repo_paths.py  report_generator.py  requirements.txt  retry_journal_entry.py  run_stock_analysis.sh  stock_analysis_orchestrator.py  stock_tracking_agent.py  (+9 more)
.cursor/skills/: README.md
assets/: stock_map.json
cores/: analysis.py  company_name_translator.py  data_client.py  data_prefetch.py  disclaimer_utils.py  language_config.py  market_calendar.py  model_config.py  openai_debug.py  openai_error_logging.py  openai_quota_utils.py  report_generation.py  social_sentiment_client.py  stock_chart.py  surge_detector.py
cores/agents/: __init__.py  company_info_agents.py  macro_intelligence_agent.py  market_index_agents.py  memory_compressor_agent.py  news_strategy_agents.py  stock_price_agents.py  telegram_summary_evaluator_agent.py  telegram_summary_optimizer_agent.py  telegram_translator_agent.py  trading_agents.py  trading_journal_agent.py
cores/chatgpt_proxy/: api_translator.py  (+1 more)
deploy/: Dockerfile
docker/: crontab  entrypoint.sh  quickstart-entrypoint.sh
docs/: CLAUDE_AGENTS.md  CLAUDE_TASKS.md  CLAUDE_TROUBLESHOOTING.md  CONTRIBUTING.md  EXTERNAL_SUBSCRIBER_GUIDE.md  RELEASE_NOTES_v2.10.0.md  RELEASE_NOTES_v2.11.0.md  RELEASE_NOTES_v2.12.0.md  SETUP.md  TRADING_JOURNAL.md  TRIGGER_BATCH_ALGORITHMS.md  agent-reference.md  tasks-reference.md  troubleshooting.md
examples/: generate_dashboard_json.py  generate_us_dashboard_json.py  translation_utils.py
integrations/: __init__.py  archive_api.py  archive_query.py  firebase_bridge.py  firecrawl_client.py
messaging/: gcp_pubsub_signal_publisher.py  redis_signal_publisher.py
prism-us/: us_stock_analysis_orchestrator.py  us_stock_tracking_agent.py  us_telegram_summary_agent.py
reporting/: pdf_converter.py  report_generator.py
scripts/: __init__.py  check_market_day.py  compress_trading_memory.py  demo.py  pending_order_batch.py  performance_tracker_batch.py  retry_journal_entry.py  stock_analysis_orchestrator.py  stock_tracking_agent.py  test_debug_redis.py  trigger_batch.py  update_current_prices.py  weekly_firecrawl_intelligence.py  weekly_insight_report.py
tests/: README_async_trading.md  conftest.py  test_firebase_bridge.py  test_gcp_pubsub_signal.py  test_integration_pipeline.py  test_journal_schema_smoke.py  test_json_parsing.py  test_multi_account_kis_auth.py  test_multi_account_us.py  test_openai_error_logging.py  test_parse_price_value.py  test_portfolio_reporter.py  test_redis_signal_pubsub.py  test_report_translation.py  test_specific_functions.py  test_strip_trailing_disclaimer.py  test_trading_agents_prompt_rules.py  test_trading_journal.py  test_trigger_reliability.py  test_youtube_crawler.py
tools/: CRONTAB_SETUP.md  PLAYWRIGHT_SETUP.md  backfill_trigger_type.py  backup_configs.sh  cleanup_logs.sh  migrate_lessons_to_principles.py  migrate_us_only_schema.py  setup_playwright.sh
tracking/: __init__.py  compression.py  db_schema.py  journal.py  telegram.py  trading_ops.py  user_memory.py
trading/: portfolio_telegram_reporter.py  stock_trading.py
ubi/: readme.md
utils/: CRONTAB_SETUP.md  backup_configs.sh  cleanup_logs.sh  setup_crontab_simple.sh  setup_us_crontab.sh
(+141 files in other folders)
