[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-insight"
version = "2.9.0"
description = "AI-powered US stock analysis & automated trading system"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
prism-demo = "prism.ops.dev.demo:main"
prism-orchestrator = "prism.ops.pipelines.stock_analysis_orchestrator:cli_main"
prism-tracking = "prism.ops.pipelines.stock_tracking_agent:cli_main"
prism-pending-orders = "prism.ops.batches.pending_order_batch:main"
prism-trigger-batch = "prism.ops.pipelines.trigger_batch:run_cli"
prism-performance-tracker = "prism.ops.batches.performance_tracker_batch:main"
prism-weekly-insight = "prism.ops.reports.weekly_insight_report:main"
prism-compress-memory = "prism.ops.maintenance.compress_trading_memory:main"
prism-update-prices = "prism.ops.maintenance.update_current_prices:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests", "tools", "examples"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "F403",
    "F405",
    "E402",
    "RUF012",
    "B008",
    "SIM108",
    "UP007",
]

[tool.ruff.lint.isort]
known-first-party = ["prism", "repo_paths"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
"examples/*" = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
"src/prism/ops/*" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning:mcp_agent.*",
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
